[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/font_win/londrina_shadow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu_main/Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/font_win/Roman SD.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/audio/music/musica_menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/menu_main/titulo_fondo.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="BackgroundMenu" type="Sprite" parent="."]
position = Vector2( 686.028, 387.7 )
scale = Vector2( 0.86381, 0.855393 )
texture = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_min_size = Vector2( 1366, 768 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -250.0
margin_right = 75.0
rect_min_size = Vector2( 150, 250 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="TextureButton" parent="Control/HBoxContainer"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="Control/HBoxContainer/Jugar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -24.0
margin_right = 48.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureButton" parent="Control/HBoxContainer"]
margin_top = 54.0
margin_right = 150.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/HBoxContainer/Creditos"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "CREDITOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="TextureButton" parent="Control/HBoxContainer"]
margin_top = 108.0
margin_right = 150.0
margin_bottom = 158.0
rect_min_size = Vector2( 100, 50 )

[node name="Label" type="Label" parent="Control/HBoxContainer/Salir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -24.0
margin_right = 42.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "SALIR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 26.3713
margin_top = -38.6779
margin_right = 77.3713
margin_bottom = -18.6779
rect_min_size = Vector2( 50, 10 )
custom_fonts/font = SubResource( 1 )
text = "V2.2.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicaMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="Control/HBoxContainer/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Salir" to="." method="_on_Salir_pressed"]
